# interpreter2

./: .gitignore  Makefile  README.md  Scratch.java  interpreter.cabal  interpreter.code-workspace  lat.bc  latc_llvm  out.bc  out.out  output.bc  package.yaml  run.sh  test-cp.bc  test-cp.ll  test.lat  test.py  todo.md
.devcontainer/: devcontainer.json  install.sh
app/: Main.hs  TestLbnf
bad/: 10-arr-out-of-bounds.mac  10-divzero.mac  12-bad-ret-type.mac  12-incompatible-op-type.mac  12-or-mistmatch.mac  cont-invalid-pos.mac  forbidden-id.mac  invalid-keyword.mac  no-return.mac  undeclared-assign.mac
bins/: interpreter  interpreter-exe
csrc/: CMakeLists.txt  ast_cleaner.cpp  basic_clean.h  builtin_funcs.cpp  cfg.cpp  cfg.h  dom_tree.cpp  dom_tree.h  ir_builder.cpp  ir_builder.h  libinfo.txt  liveness.h  main.cpp  mem2reg.cpp  mem2reg.h  output.h  printer.cpp  reader.cpp  skel.cpp  skel.h  syntax.h  treeparse.cpp  util.cpp  util.h  visitor.h
csrc/graphs/: cfg.cpp  cfg.h  dom_tree.cpp  dom_tree.h
csrc/passes/: basic_clean.h  gcse.cpp  gcse.h  init_pass.cpp  pass_util.cpp  pass_util.h  tree_fold.h  tree_trim.cpp  tree_trim.h  val_prop.cpp  val_prop.h
debug/: draw_cfg.ipynb  test.ll
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
good/: 01-types.mac  02-type-ops.mac  03-var-assing.mac  05-collatz-while.mac  09-static-bind.mac  13-nested-funcs.mac
lattests/bad/: bad003.lat  bad008.lat  bad025.lat  bad028.lat  bad029.lat  bad030.lat
lattests/good/: core000.lat  core001.lat  core003.lat  core012.lat
lib/: 20Dead.ppt  runtime.bc  runtime.ll  test.in
src/: Main.hi  Main.hs  Makefile  latc_llvm
src/Interpretation/: Err.hs  Interpret.hi  Interpret.hs  Interpreter.hs  MacchiatoVals.hi  MacchiatoVals.hs  Traverser.hi  Traverser.hs  interpret.hs
src/Mem/: SymbolTable.hi  SymbolTable.hs
src/Parsing/: AbsMacchiato.hi  AbsMacchiato.hs  DocMacchiato.txt  ErrM.hs  LexMacchiato.hi  LexMacchiato.hs  LexMacchiato.x  ParMacchiato.hi  ParMacchiato.hs  ParMacchiato.info  ParMacchiato.y  PrintMacchiato.hi  PrintMacchiato.hs  SkelMacchiato.hs  TestMacchiato  build-parser.py  macchiato.cf  rebuild.md
src/StaticAnalysis/: CFGOptim.hi  CFGOptim.hs  CFGTraverser.hi  CFGTraverser.hs  Err.hi  Err.hs  MacchiatoTypes.hi  MacchiatoTypes.hs  MacchiatoVals.hi  MacchiatoVals.hs  Params.hs  StaticCheck.hs  StaticChecks.hs  TCTraverser.hi  TCTraverser.hs  Traverser.hi  Traverser.hs  TypeCheck.hi  TypeCheck.hs  TypeChecks.hs
src/Util/: FieldExtractors.hi  FieldExtractors.hs
src/csrc/: CMakeLists.txt  builtin_funcs.h  ir_builder.h  main.cpp  printer.cpp  printer.h  skel.h  treeparse.cpp  treeparse.h  util.cpp  visitor.h
src/haskellsrc/: Makefile
test/: Spec.hs  TestMacchiato  TestMacchiato.hs  test_program.lat
tmp/: core001.bc  core001.ll  in.bc  in.ll  out.ll  run.bc  test.ll
(+65 files in other folders)
